syntax = "proto3";

import "google/protobuf/any.proto";
import "storage.proto";

package redsort.jobs.messages;
message JobSpecMsg {
  string name = 1;
  repeated google.protobuf.Any args = 2;
  repeated FileEntryMsg inputs = 3;
  repeated FileEntryMsg outputs = 4;
  int32 outputSize = 5;
}